--- a/css/_fixed_button.css
+++ b/css/_fixed_button.css
@@ -1,74 +1,107 @@
 /*Recruit banner*/
 .recruitment-banner {
-    display: none;
-    position: fixed;
-    bottom: 80px;
-    right: -150px;
-    transform: translateX(-50%);
-    background: linear-gradient(to bottom left, #2875BB 30%, #18b0c4 100%);
-    color: #fff;
-    padding: 20px 20px;
-    text-align: center;
-    height: auto;
-    width: 80%;
-    max-width: 400px;
-    border-radius: 5px;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-    border: 4px solid rgba(255, 255, 255, 0.1);
-    transition: right 0.3s ease-in-out;
-    cursor: pointer;
+  display: block;
+  position: fixed;
+  min-height: 80px;
+  max-height: fit-content;
+  width: 50%;
+  max-width: 900px;
+  bottom: 7%;
+  left: 50%;
+  transform: translateX(-50%) translateY(50%);
+  background: linear-gradient(to bottom, #2875BB, #18b0c4);
+  color: #fff;
+  padding: 0 30px;
+  text-align: center;
+  border-radius: 40px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  border: 4px solid rgba(255, 255, 255, 0.1);
+  transition: right 0.3s ease-in-out;
+  z-index: 1000;
+}
+
+.recruitment-banner h3 {
+  font-size: 1.3em;
+}
+
+.recruitment-content {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .recruitment-banner p {
-    margin: 0;
+  margin: 0;
+  display: inline-block;
+  width: 40px;
+}
+
+.recruit-btn {
+  display: inline-block;
+  margin: 5px 10px;
+  padding: 8px 20px;
+  text-decoration: none;
+  background: #FFF;
+  color: #464e5e;
+  border-radius: 20px;
+  font-weight: bold;
+  box-shadow: 3px 4px 0 rgb(0, 0, 0, 0.5);
+}
+
+.recruit-btn:active {
+  box-shadow: 1px 1px 0 rgb(0, 0, 0, 0.5);
+  position: relative;
+  top: 2px;
+  cursor: pointer;
 }
 
 .recruitment-banner .close {
-    position: absolute;
-    top: 3px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
+  position: absolute;
+  top: 8%;
+  right: 3%;
+  cursor: pointer;
 }
 
-.recruitment-banner:hover,
 .contact-icon:hover {
-    background: linear-gradient(to bottom left, #5ca6d7 20%, #49c4cd 80%);
+  background: linear-gradient(to bottom left, #5ca6d7 20%, #49c4cd 80%);
 }
 
-.recruitment-banner:active,
 .contact-icon:active {
-    box-shadow: inset 0 0 1rem #2875BB, inset 0 0 2rem #18b0c4;
+  box-shadow: inset 0 0 1rem #2875BB, inset 0 0 2rem #18b0c4;
 }
 
 #doNotShowAgain {
-    background-color: transparent;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    position: fixed;
-    bottom: 5px;
-    right: 10px;
+  display: inline-block;
+  bottom: -5px;
+  right: 3%;
+  font-size: 0.7em;
+  padding: 5px 20px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s, color 0.3s;
+  background-color: transparent;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  position: fixed;
 }
 
 #doNotShowAgain:hover {
-    color: #c2c2c2;
-    text-decoration: underline;
+  color: #c2c2c2;
+  text-decoration: underline;
 }
 
 /*Contact icon*/
-
 .contact-icon {
-    position: fixed;
-    bottom: 20px;
-    right: 50px;
-    background: linear-gradient(to bottom left, #2875BB 30%, #18b0c4 100%);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-    color: #fff;
-    font-size: 24px;
-    padding: 10px 13px 8px 12px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
+  position: fixed;
+  bottom: 20px;
+  right: 50px;
+  background: linear-gradient(to bottom left, #2875BB 30%, #18b0c4 100%);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  padding: 8px 13px 5px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
-
