--- a/css/_sections.css
+++ b/css/_sections.css
@@ -2,10 +2,8 @@
 
 .undersection {
     display: block;
-    max-height: 1200px;
     margin: 0 auto;
     padding: 80px 0;
-    /* 상하 여백 조절 */
     text-align: left;
 }
 
@@ -31,44 +29,48 @@
 
 
 /*Section: program-intro*/
-
-
-/*Section: instructor*/
-#instructor {
-    height: auto;
+#program-intro img {
+    width: 100%;
+    height: auto; 
+    display: block; 
+    margin: 0 auto;
 }
 
-.instructor-info {
+/*Section: result-data*/
+.data-container {
     display: flex;
-    align-items: top;
-}
-
-.instructor-info img {
-    max-width: 400px;
-    /* 적절한 이미지 너비 설정 */
-    margin-right: 20px;
-    /* 이미지와 텍스트 사이 여백 조절 */
-    box-shadow: 0 0 10px rgba(95, 177, 212, 1);
-    border-radius: 10px;
-}
-
-.instructor-description {
-    margin-top: 20px;
+    align-items: center;
+    justify-content: space-between;
     padding: 0 20px;
-    flex-grow: 1;
-    /* 텍스트 영역이 남은 공간을 최대한 확장하도록 */
+    margin: 50px auto;
 }
 
-#instructor-name {
-    font-size: 30px;
-    font-weight: bold;
-    color: #2875bb;
+.data-graphic {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px; 
+    flex: 0 0 calc(25% - 40px);
 }
 
-#instructor-teacher {
-    font-size: 24px;
-    font-weight: bold;
+.data-graphic img {
+    margin-right: 15px;
+    max-height: 150px;
 }
+
+#data1 {
+    max-width: 100%;
+}
+
+#data2 {
+    max-width: 100%;
+}
+
+#data3 {
+    max-width: 100%;
+}
+
 
 /*Section: reviews*/
 #reviews {
@@ -80,7 +82,6 @@
     flex-wrap: wrap;
     gap: 40px;
     align-items: flex-start;
-    /* 수직 정렬을 위해 시작 부분으로 정렬합니다. */
 }
 
 #reviews h2 {
@@ -94,11 +95,6 @@
     /* 각 카드가 한 행에 4개씩 나오도록 설정 */
     margin-bottom: 80px;
 }
-
-/* .review-card:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    transform: scale(1.05);
-} */
 
 /*Section: merit*/
 .merit-items {
@@ -125,7 +121,25 @@
 }
 
 .merit-phrase {
-    margin: 80px auto;
+    margin: 80px auto 0;
+    text-align: center;
+}
+
+/*Section: comparison*/
+#comparison table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    text-align: center;
+}
+
+#comparison th {
+    font-size: 1.3em;
+}
+
+#comparison td {
+    border: 1px solid #ddd;
+    padding: 8px;
     text-align: center;
 }
 
@@ -218,6 +232,42 @@
     margin-left: 20px;
 }
 
+/*Section: instructor*/
+#instructor {
+    height: auto;
+}
+
+.instructor-info {
+    display: flex;
+    align-items: top;
+}
+
+.instructor-info img {
+    max-width: 400px;
+    /* 적절한 이미지 너비 설정 */
+    margin-right: 20px;
+    /* 이미지와 텍스트 사이 여백 조절 */
+    border-radius: 10px;
+}
+
+.instructor-description {
+    margin-top: 20px;
+    padding: 0 20px;
+    flex-grow: 1;
+    /* 텍스트 영역이 남은 공간을 최대한 확장하도록 */
+}
+
+#instructor-name {
+    font-size: 30px;
+    font-weight: bold;
+    color: #2875bb;
+}
+
+#instructor-teacher {
+    font-size: 24px;
+    font-weight: bold;
+}
+
 /*Section: faq*/
 .faq-container {
     display: flex;
@@ -235,6 +285,7 @@
     cursor: pointer;
     background-color: #d9f4ff;
     color: #556b73;
+    box-shadow: 3px 4px 0 rgb(0, 0, 0, 0.5);
     border-radius: 30px;
     font-weight: bold;
     text-align: center;
@@ -244,6 +295,8 @@
 .category-item.selected {
     color: #FFFFFF;
     background-color: #5Fb1d4;
+    box-shadow: 1px 1px 0 rgb(0, 0, 0, 0.5);
+    top: 2px;
 }
 
 .faq-list {
@@ -265,6 +318,7 @@
     padding: 20px;
     border: dashed 3px #d6eaf8;
     border-radius: 5px;
+    font-weight: bold;
 }
 
 .answer {
@@ -286,3 +340,7 @@
 }
 
 /*Section: contact-us*/
+#contact-us a:hover {
+    color: #c2c2c2;
+    text-decoration: underline;
+}
