--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,11 @@ h2 {
 }
 
 h3 {
-  font-size: 1.7em;
+  font-size: 1.6em;
+}
+
+h4 {
+  font-size: 1.3em;
 }
 
 p {
@@ -46,7 +50,7 @@ p {
 }
 
 .quotation {
-  font-size: 18px;
+  font-size: 1.2em;
   font-style: italic;
 }
 
@@ -117,8 +121,40 @@ a {
 #contact-us {
   background-color: #2875BB; 
   color: #FFF;
-  height: 500px;
+  height: 400px;
 }
 
+/*스크롤바 스타일링*/
+body::-webkit-scrollbar {
+  width: 12px; /* 스크롤바의 너비 */
+}
+
+/* 스크롤바의 스크롤 트랙 스타일 설정 */
+body::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* 스크롤 트랙 배경색 */
+}
+
+/* 스크롤바의 스크롤 핸들 스타일 설정 */
+body::-webkit-scrollbar-thumb {
+  background-color: #888; /* 스크롤 핸들 색상 */
+  border-radius: 6px; /* 스크롤 핸들의 모서리 둥글게 만들기 */
+}
+
+/* 스크롤바의 코너(스크롤 트랙과 핸들의 교차 지점) 스타일 설정 */
+body::-webkit-scrollbar-corner {
+  background-color: #f1f1f1; /* 코너 배경색 */
+}
+.card-container::-webkit-scrollbar {
+  height: 12px; /* 수평 스크롤바 높이 설정 */
+}
+
+.card-container::-webkit-scrollbar-thumb {
+  background-color: #888; /* 스크롤바 색상 설정 */
+  border-radius: 6px; /* 스크롤바 모서리 둥글게 설정 */
+}
+
+.card-container::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* 스크롤바 트랙 배경색 설정 */
+}
 
 /*background: linear-gradient(to bottom left, #2875BB 30%, #18b0c4 100%);*/
