--- a/css/_fixed_button.css
+++ b/css/_fixed_button.css
@@ -1,17 +1,17 @@
+@media all and (min-width: 1024px) {
 /*Recruit banner*/
 .recruitment-banner {
   display: block;
   position: fixed;
   min-height: 80px;
   max-height: fit-content;
-  width: 50%;
-  max-width: 900px;
+  width: 900px;
   bottom: 7%;
   left: 50%;
   transform: translateX(-50%) translateY(50%);
   background: linear-gradient(to bottom, #2875BB, #18b0c4);
   color: #fff;
-  padding: 0 30px;
+  padding: 0 10px;
   text-align: center;
   border-radius: 40px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
@@ -20,7 +20,7 @@
   z-index: 1000;
 }
 
-.recruitment-banner h3 {
+.recruitment-content h3 {
   font-size: 1.3em;
 }
 
@@ -34,7 +34,7 @@
 .recruitment-banner p {
   margin: 0;
   display: inline-block;
-  width: 40px;
+  width: 30px;
 }
 
 .recruit-btn {
@@ -56,25 +56,20 @@
   cursor: pointer;
 }
 
+/*
 .recruitment-banner .close {
   position: absolute;
   top: 8%;
-  right: 3%;
+  right: 2%;
   cursor: pointer;
 }
+*/
 
-.contact-icon:hover {
-  background: linear-gradient(to bottom left, #5ca6d7 20%, #49c4cd 80%);
-}
-
-.contact-icon:active {
-  box-shadow: inset 0 0 1rem #2875BB, inset 0 0 2rem #18b0c4;
-}
-
+/*
 #doNotShowAgain {
   display: inline-block;
   bottom: -5px;
-  right: 3%;
+  left: 3%;
   font-size: 0.7em;
   padding: 5px 20px;
   text-decoration: none;
@@ -91,17 +86,201 @@
   color: #c2c2c2;
   text-decoration: underline;
 }
+*/
 
 /*Contact icon*/
 .contact-icon {
   position: fixed;
   bottom: 20px;
-  right: 50px;
+  right: 30px;
   background: linear-gradient(to bottom left, #2875BB 30%, #18b0c4 100%);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
   color: #fff;
   padding: 8px 13px 5px;
-  border-radius: 50%;
+  border-radius: 30%;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
+}
+
+.contact-icon:hover {
+  background: linear-gradient(to bottom left, #5ca6d7 20%, #49c4cd 80%);
+}
+
+.contact-icon:active {
+  box-shadow: inset 0 0 1rem #2875BB, inset 0 0 2rem #18b0c4;
+}
+}
+
+
+
+@media all and (min-width: 768px) and (max-width: 1023px) {
+/*Recruit banner*/
+.left-time {
+  font-size: 1em;
+}
+
+.recruitment-banner {
+  display: block;
+  position: fixed;
+  width: 100%;
+  bottom: 3%;
+  left: 50%;
+  transform: translateX(-50%) translateY(50%);
+  background: linear-gradient(to bottom, #2875BB, #18b0c4);
+  color: #fff;
+  padding: 0 10px;
+  text-align: center;
+  transition: right 0.3s ease-in-out;
+  z-index: 1000;
+  font-size: 0.8em;
+}
+
+.recruitment-banner {
+  font-size: 0.9em;
+}
+
+.recruitment-content {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.recruitment-content h3 {
+  margin: 20px auto; /* 또는 원하는 값으로 조절 */
+  font-size: 1.3em;
+}
+
+.recruitment-banner p {
+  margin: 0;
+  display: inline-block;
+}
+
+.recruit-btn {
+  display: inline-block;
+  margin: 5px 10px 10px;
+  padding: 5px 20px;
+  text-decoration: none;
+  background: #FFF;
+  color: #464e5e;
+  border-radius: 20px;
+  font-weight: bold;
+  box-shadow: 3px 4px 0 rgb(0, 0, 0, 0.5);
+}
+
+.recruit-btn:active {
+  box-shadow: 1px 1px 0 rgb(0, 0, 0, 0.5);
+  position: relative;
+  top: 2px;
+  cursor: pointer;
+}
+
+/*Contact icon*/
+.contact-icon {
+  position: fixed;
+  bottom: 85px;
+  right: 10px;
+  background: linear-gradient(to bottom left, #2875BB 30%, #18b0c4 100%);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  padding: 8px 13px 5px;
+  border-radius: 30%;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+
+.contact-icon:hover {
+  background: linear-gradient(to bottom left, #5ca6d7 20%, #49c4cd 80%);
+}
+
+.contact-icon:active {
+  box-shadow: inset 0 0 1rem #2875BB, inset 0 0 2rem #18b0c4;
+}
+}
+
+@media all and (max-width: 767px) {
+/*Recruit banner*/
+.left-time {
+  display: none; 
+}
+
+.recruitment-banner {
+  display: block;
+  position: fixed;
+  width: 100%;
+  bottom: 2.7%;
+  left: 50%;
+  transform: translateX(-50%) translateY(50%);
+  background: linear-gradient(to bottom, #2875BB, #18b0c4);
+  color: #fff;
+  padding: 0 10px;
+  text-align: center;
+  transition: right 0.3s ease-in-out;
+  z-index: 1000;
+  font-size: 0.8em;
+}
+
+.recruitment-content {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.recruitment-content > div {
+  margin: 0 30px; 
+}
+
+.recruitment-content h3 {
+  margin: 15px auto; /* 또는 원하는 값으로 조절 */
+  font-size: 1.3em;
+}
+
+.recruitment-banner p {
+  margin: 0;
+  display: inline-block;
+}
+
+.recruit-btn {
+  display: inline-block;
+  margin: 5px 10px 10px;
+  padding: 5px 20px;
+  text-decoration: none;
+  background: #FFF;
+  color: #464e5e;
+  border-radius: 20px;
+  font-weight: bold;
+  box-shadow: 3px 4px 0 rgb(0, 0, 0, 0.5);
+}
+
+.recruit-btn:active {
+  box-shadow: 1px 1px 0 rgb(0, 0, 0, 0.5);
+  position: relative;
+  top: 2px;
+  cursor: pointer;
+}
+
+/*Contact icon*/
+.contact-icon {
+  position: fixed;
+  bottom: 85px;
+  right: 10px;
+  background: linear-gradient(to bottom left, #2875BB 30%, #18b0c4 100%);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  padding: 8px 13px 5px;
+  border-radius: 30%;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+
+.contact-icon:hover {
+  background: linear-gradient(to bottom left, #5ca6d7 20%, #49c4cd 80%);
+}
+
+.contact-icon:active {
+  box-shadow: inset 0 0 1rem #2875BB, inset 0 0 2rem #18b0c4;
+}
 }
