--- a/css/_footer.css
+++ b/css/_footer.css
@@ -1,9 +1,33 @@
+@media all and (min-width: 1024px) {
 /*footer*/
-
 footer {
-    max-width: 1600px;
+    width: 100%;
     margin: 0 auto;
-    padding: 0 0 10px 0;
+    padding: 1rem 1em 10rem;
     background: #FFF;
     font-size: 12px;
+    text-align: center;
+}
+}
+
+@media all and (min-width: 768px) and (max-width: 1023px) {
+footer {
+    width: 100%;
+    margin: 0 auto;
+    padding: 1rem 1em 10rem;
+    background: #FFF;
+    font-size: 12px;
+    text-align: center;
+}
+}
+
+@media all and (max-width: 767px) {
+    footer {
+        width: 100%;
+        margin: 0 auto;
+        padding: 1rem 1em 10rem;
+        background: #FFF;
+        font-size: 12px;
+        text-align: center;
+    }
 }
