--- a/css/_sections.css
+++ b/css/_sections.css
@@ -229,7 +229,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0;
+    background-color: #d9f4ff;
 }
 
 .back {
@@ -238,7 +238,7 @@
     justify-content: flex-start; 
     align-items: center;
     transform: rotateY(180deg);
-    background-color: #d3d3d3;
+    background-color: #f0f0f0;
     padding: 50px 20px;
 }
 
@@ -290,6 +290,7 @@
     font-weight: bold;
     transition: background-color 0.3s ease;
     box-shadow: 3px 4px 0 rgb(0, 0, 0, 0.5);
+    line-height: 1;
 }
 
 .weekButton {
@@ -728,6 +729,7 @@
     font-weight: bold;
     transition: background-color 0.3s ease;
     box-shadow: 3px 4px 0 rgb(0, 0, 0, 0.5);
+    line-height: 1;
 }
 
 .weekButton {
@@ -858,7 +860,7 @@
     cursor: pointer;
     background-color: #FFF;
     margin: 5px auto;
-    padding: 20px;
+    padding: 15px;
     border: dashed 3px #d6eaf8;
     border-radius: 5px;
     font-weight: bold;
@@ -869,8 +871,8 @@
     max-height: 0;
     background-color: #FFFFFF;
     overflow: hidden;
-    margin: 5px auto;
-    padding: 0 20px;
+    margin: 0 auto;
+    padding: 0 10px;
     border-radius: 5px;
     transition: max-height 0.2s ease-in-out, padding 0.2s ease-in-out;
 }
@@ -878,7 +880,7 @@
 .answer.show {
     max-height: 500px;
     transition-delay: 0.1s;
-    padding: 20px 20px;
+    padding: 10px 10px;
     margin-bottom: 10px;
 }
 
@@ -1011,6 +1013,7 @@
     text-align: center;
     border-radius: 30px;
     table-layout: fixed;
+    font-size: 0.8em;
 }
 
 #comparison th {
@@ -1048,7 +1051,7 @@
     font-weight: bold;
 }
 
-/*Section: experienc-reviews*/
+/*Section: experience-reviews*/
 .card-container {
     display: flex;
     flex-direction: column;
@@ -1167,6 +1170,7 @@
     font-weight: bold;
     transition: background-color 0.3s ease;
     box-shadow: 3px 4px 0 rgb(0, 0, 0, 0.5);
+    line-height: 1;
 }
 
 .weekButton {
@@ -1254,16 +1258,17 @@
 }
 
 .faq-category {
-    width: 20%;
+    width: 100%;
     height: auto;
     white-space: nowrap;
-    display: flex; /* 추가: 내부 아이템을 가로로 배치하기 위한 설정 */
+    display: flex; 
+    flex-direction: column;
 }
 
 .category-item {
     border-radius: 5px;
-    margin: 10px ;
-    padding: 20px;
+    margin: 3px;
+    padding: 5px;
     cursor: pointer;
     background-color: #d9f4ff;
     color: #556b73;
@@ -1298,7 +1303,7 @@
     cursor: pointer;
     background-color: #FFF;
     margin: 5px auto;
-    padding: 20px;
+    padding: 10px;
     border: dashed 3px #d6eaf8;
     border-radius: 5px;
     font-weight: bold;
